RESOLVED FIXED207130
[Web Animations] Accelerated animations don't run until their natural completion
https://bugs.webkit.org/show_bug.cgi?id=207130
Summary [Web Animations] Accelerated animations don't run until their natural completion
Antoine Quint
Reported 2020-02-03 10:14:38 PST
[Web Animations] Accelerated animations don't run until their natural completion
Attachments
Patch (8.84 KB, patch)
2020-02-03 10:25 PST, Antoine Quint
dino: review+
Antoine Quint
Comment 1 2020-02-03 10:25:48 PST
Antoine Quint
Comment 2 2020-02-03 10:26:43 PST
Antoine Quint
Comment 3 2020-02-03 11:17:16 PST
So webanimations/opacity-accelerated-animation-finishes-before-removal.html is failing on WK1, which is expected since it doesn't composite opacity animations alone. Will use "transform" instead when landing so that it works across both WK1 and WK2.
Antoine Quint
Comment 4 2020-02-03 14:16:53 PST
Note You need to log in before you can comment on or make changes to this bug.